feat: add auth controller
