# internal/infrastructure/http/dto/auth_dto.go
@@ -1,0 +1,20 @@
+package dto
+
+import "time"
+
+type LoginRequest struct {
+	Username string `json:"username" validate:"required"`
+	Password string `json:"password" validate:"required"`
+}
+
+type RegisterRequest struct {
+	Username        string `json:"username" validate:"required,min=3,max=32"`
+	Email           string `json:"email" validate:"required,email"`
+	Password        string `json:"password" validate:"required,min=8,max=32"`
+	ConfirmPassword string `json:"confirm_password" validate:"required,eqfield=Password"`
+}
+
+type LoginResponse struct {
+	Token    string    `json:"token"`
+	ExpireAt time.Time `json:"expire_at"`
+}
